--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -1746,5 +1746,406 @@
   },
   "unstartedSeeAll": {
     "string": "Alle noch nicht angefangenen Titel anzeigen"
+  },
+  "andOnboarding__intro": {
+    "string": "Erstelle ein Konto oder melde dich an, um eine immer größer werdende Anzahl an Funktionen zum Studium der gesunden Lehre zu nutzen."
+  },
+  "app__features1Cta": {
+    "string": "Audio entdecken"
+  },
+  "app__features1Heading": {
+    "string": "Alte und neue Schätze"
+  },
+  "app__features1Kicker": {
+    "string": "Entdecke leicht zugängliche, inspirierende Inhalte aus den reich gefüllten Schatzkammern geistlicher Botschaften."
+  },
+  "app__features2Cta": {
+    "string": "Neueste Inhalte ansehen"
+  },
+  "app__features2Heading": {
+    "string": "Gegenwärtige Wahrheit"
+  },
+  "app__features2Kicker": {
+    "string": "AudioVerse erleichtert die Suche nach aktuellen Inhalten deiner Lieblingssprecher, Konferenzen und Sponsoren."
+  },
+  "app__features3Cta": {
+    "string": "Karten durchsuchen"
+  },
+  "app__features3Heading": {
+    "string": "Verbunden und harmonisch "
+  },
+  "app__features3Kicker": {
+    "string": "Karten zeigen relevante Informationen an, z. B. übergeordnete Serien. Auf den Detailseiten findest du zusätzliche Kontexte und Verknüpfungen. So behältst du den Überblick. "
+  },
+  "app__features4Cta": {
+    "string": "Bibliothek durchsuchen "
+  },
+  "app__features4Heading": {
+    "string": "Beliebte Inhalte speichern"
+  },
+  "app__features4Kicker": {
+    "string": "Stell dir deine eigene Bibliothek mit Inhalten zusammen, die du dir später anhören möchtest. Deine Einstellungen werden auf allen deinen Geräten synchronisiert."
+  },
+  "app__features5Cta": {
+    "string": "Finde Inhalte zum Herunterladen "
+  },
+  "app__features5Heading": {
+    "string": "Sammelt euch aber Schätze …"
+  },
+  "app__features5Kicker": {
+    "string": "Lade Inhalte auf deine Geräte herunter, um sie auch offline nutzen zu können, wenn du keinen Empfang hast oder dein Datenvolumen schonen möchtest."
+  },
+  "bibleBook__disclaimer": {
+    "string": "Die allgemeinen Geschäftsbedingungen für die Nutzung der Audiobibeln von Faith Comes By Hearing unterbinden das Herunterladen sowie die Integration bestimmter Funktionen auf unserer Plattform."
+  },
+  "buttonShare__emailSubject": {
+    "string": "Sei gesegnet"
+  },
+  "cardPost__typeLabel": {
+    "string": "Blog"
+  },
+  "cardSlider__pageNumberLabel": {
+    "string": "Seite {number}"
+  },
+  "cardSongBook__contributors": {
+    "string": "Verschiedene Mitwirkende "
+  },
+  "cardSongBook__numSongs": {
+    "string": "{count} Lieder"
+  },
+  "collectionDetail__presentersAllLabel": {
+    "string": "Alle Sprecher anzeigen"
+  },
+  "collectionDetail__presentersLabel": {
+    "comment": "Collection Detail speakers label",
+    "string": "Sprecher"
+  },
+  "collectionType__audiobookSeries": {
+    "string": "Buchserie"
+  },
+  "collectionType__conference": {
+    "string": "Konferenz"
+  },
+  "collectionType__musicSeries": {
+    "string": "Musikserie"
+  },
+  "collectionType__storyProgram": {
+    "string": "Geschichtenprogramm"
+  },
+  "contact__bodyLabel": {
+    "string": "Textkörper"
+  },
+  "contact__emailLabel": {
+    "string": "E-Mail-Adresse"
+  },
+  "contact__emailPlaceholder": {
+    "string": "jane@example.com"
+  },
+  "contact__firstNameLabel": {
+    "string": "Vorname"
+  },
+  "contact__firstNamePlaceholder": {
+    "string": "Jane"
+  },
+  "contact__intro": {
+    "string": "Wir hören gerne von unseren Nutzern, auch wenn es nur um technische Probleme geht! Euer Feedback ermutigt uns, diese Arbeit fortzusetzen und hilft uns, die Nutzererfahrung auch für andere Nutzer fortwährend zu verbessern. Wenn du mit uns Kontakt aufnehmen möchtest, nutze bitte das Kontaktformular dafür. Wir melden uns umgehend bei dir."
+  },
+  "contact__lastNameLabel": {
+    "string": "Nachname"
+  },
+  "contact__lastNamePlaceholder": {
+    "string": "Mustermann"
+  },
+  "contact__recipient": {
+    "string": "Art der Kontaktanfrage"
+  },
+  "contact__recipient-general": {
+    "string": "Allgemeine Anfrage"
+  },
+  "contact__recipient-technical": {
+    "string": "Technische Unterstützung "
+  },
+  "contact__recipient-testimonials": {
+    "string": "Erfahrungsbericht"
+  },
+  "contact__submitLabel": {
+    "string": "Senden"
+  },
+  "contact__success": {
+    "string": "Gesendet!"
+  },
+  "contact__testimonyLabel": {
+    "string": "Erfahrung"
+  },
+  "contact__title": {
+    "string": "Kontakt"
+  },
+  "discoverCollections_presentersHeading": {
+    "string": "Sprecher"
+  },
+  "downloadAppButton__altLabel": {
+    "string": "Jetzt herunterladen"
+  },
+  "embed__partInfo": {
+    "string": "Teil {index} von {count}"
+  },
+  "give__amazonCta": {
+    "string": "Jetzt kaufen"
+  },
+  "give__amazonDescription": {
+    "string": "Von jedem Einkauf auf AmazonSmile erhält AudioVerse 0,5%. {br} {br}Wie? Klicke einfach auf den Button.{br} {br} Das war's schon! Achte darauf, die neue AmazonSmile Website als Lesezeichen abzuspeichern, damit dein Browser nicht automatisch auf die normale Amazon Webseite zurückkehrt."
+  },
+  "give__amazonTitle": {
+    "string": "Amazon Smile"
+  },
+  "give__checkDescription": {
+    "string": "Schecks bitte an AudioVerse ausstellen. {br} {br}Unsere Postanschrift lautet: {br} {br}AudioVerse {br}Postfach 2288 {br}Collegedale, TN 37315-2288 {br}USA"
+  },
+  "give__checkTitle": {
+    "string": "Scheck per Postversand"
+  },
+  "give__estateCta": {
+    "string": "Jetzt spenden"
+  },
+  "give__estateDescription": {
+    "string": "Du kannst AudioVerse nachhaltig unterstützen, indem du AudioVerse in deiner Nachlassplanung berücksichtigst. Am einfachsten geht das, indem du AudioVerse als Begünstigten auf deine Finanzkonten eintragen oder in dein Testament oder deinen Treuhandfonds aufnehmen lässt.{br}{br}Wer dem Werk des Herrn ein dauerhaftes Vermächtnis hinterlassen möchte, aber auf sein Vermögen angewiesen ist, für den mag eine gemeinnützige Schenkungsrente eine gute Option sein. Diese Methode ist sowohl für den Geber als auch den Empfänger von Vorteil. Um unseren Unterstützern diese Option zu ermöglichen, arbeitet AudioVerse mit der Western Adventist Foundation (WAF) zusammen.{br} {br}Bitte kontaktiere direkt die WAF telefonisch oder über ihre Webseite, wenn du AudioVerse eine Schenkungsrente zukommen lassen möchtest."
+  },
+  "give__estateDisclaimer": {
+    "string": "Gemeinnützige Schenkungsrenten sind in folgenden Staaten nicht möglich: Alabama, Maryland, Washington. Schenkungen aus Kalifornien und Illinois werden über die Pacific Union Conference der Gemeinde der Siebenten-Tags-Adventisten abgerechnet; Schenkungen von Personen aus Hawaii werden über die Hawaii Conference der Gemeinde der Siebenten-Tags-Adventisten abgerechnet. Alle anderen Schenkungsrenten zugunsten AudioVerse laufen über die Western Adventist Foundation.  Die Western Adventist Foundation bietet keine Rechtsberatung an. Einzelpersonen sollten sich von ihrem eigenen Rechtsbeistand beraten lassen. "
+  },
+  "give__estateTitle": {
+    "string": "AudioVerse in der Nachlassplanung berücksichtigen"
+  },
+  "give__givingAssistantCta": {
+    "string": "Jetzt kaufen"
+  },
+  "give__givingAssistantDescription": {
+    "string": "Spende bis zu 30% deines Einkaufswerts an AudioVerse bei über 1800 bekannten Onlinehändlern mithilfe des Giving Assistant! Das geht ganz einfach. Der Giving Assistant zahlt dir bei Onlinekäufen eingespartes Geld zurück. Einen Teil davon kannst du nach Belieben an uns spenden. Probiere es aus und entdecke günstige Angebote und Gutscheine bei zahlreichen Online-Shops wie Home Depot und JC Penney!"
+  },
+  "give__givingAssistantTitle": {
+    "string": "Giving Assistant"
+  },
+  "give__heading": {
+    "string": "Spenden"
+  },
+  "give__paypalCta": {
+    "string": "Jetzt spenden"
+  },
+  "give__paypalDescription": {
+    "string": "Um AudioVerse eine Spende zu senden, gehe auf den Paypal Spendenfonds von AudioVerse. Deine Spende wird zu 100% für die Tätigkeiten von AudioVerse eingesetzt, es entstehen keine Bearbeitungsgebühren. Der Paypal Spendenfonds (nicht AudioVerse) stellt dir anschließend eine steuerlich absetzbare Spendenquittung aus."
+  },
+  "give__paypalTitle": {
+    "string": "Paypal Spendenfonds"
+  },
+  "header__navItemCollections-books": {
+    "string": "Bücher"
+  },
+  "header__navItemCollections-conferences": {
+    "string": "Konferenzen"
+  },
+  "header__navItemCollections-presenters": {
+    "string": "Sprecher"
+  },
+  "header__navItemCollections-sponsors": {
+    "string": "Sponsoren"
+  },
+  "header__navItemContact": {
+    "string": "Kontakt"
+  },
+  "header__navItemContact-facebook": {
+    "string": "Facebook"
+  },
+  "header__navItemContact-general": {
+    "string": "Allgemeine Anfrage"
+  },
+  "header__navItemContact-instagram": {
+    "string": "Instagram"
+  },
+  "header__navItemContact-support": {
+    "string": "Technische Unterstützung "
+  },
+  "header__navItemContact-testimony": {
+    "string": "Erfahrungsbericht"
+  },
+  "header__navItemContact-twitter": {
+    "string": "Twitter"
+  },
+  "header__navItemContact-youtube": {
+    "string": "YouTube"
+  },
+  "header__navItemLibrary-history": {
+    "string": "Verlauf"
+  },
+  "header__navItemLibrary-playlists": {
+    "string": "Playlisten"
+  },
+  "header__navItemLibrary-saved": {
+    "string": "Gespeichert "
+  },
+  "header__navItemPresenters": {
+    "string": "Sprecher"
+  },
+  "header__navItemStory-blog": {
+    "string": "Blog"
+  },
+  "homePage__learnStoryButtonLabel": {
+    "string": "Erfahre mehr über uns"
+  },
+  "homePage__newsletterEmail": {
+    "string": "E-Mail-Adresse"
+  },
+  "homePage__newsletterEmailPlaceholder": {
+    "string": "josephbates@email.com"
+  },
+  "homePage__newsletterHatTitle": {
+    "string": "Für den Newsletter anmelden "
+  },
+  "homePage__newsletterName": {
+    "string": "Name"
+  },
+  "homePage__newsletterNamePlaceholder": {
+    "string": "Joseph Bates"
+  },
+  "homePage__newsletterSubscribe": {
+    "string": "Abonnieren"
+  },
+  "homePage__tagline": {
+    "string": "Biblische Lehre"
+  },
+  "libraryHistory__loadingMore": {
+    "string": "Mehr laden…"
+  },
+  "libraryNav__contentType": {
+    "string": "Art der Inhalte"
+  },
+  "libraryNav__contentType-all": {
+    "string": "Alle"
+  },
+  "libraryNav__contentType-audiobooks": {
+    "string": "Hörbücher"
+  },
+  "libraryNav__contentType-conferences": {
+    "string": "Konferenzen"
+  },
+  "libraryNav__contentType-music": {
+    "string": "Musik"
+  },
+  "libraryNav__contentType-people": {
+    "string": "Menschen "
+  },
+  "libraryNav__contentType-series": {
+    "string": "Serien"
+  },
+  "libraryNav__contentType-sponsors": {
+    "string": "Sponsoren"
+  },
+  "libraryNav__contentType-stories": {
+    "string": "Geschichten"
+  },
+  "libraryNav__contentType-teachings": {
+    "string": "Lehren"
+  },
+  "libraryNav__duration": {
+    "string": "Dauer"
+  },
+  "libraryNav__duration-all": {
+    "string": "Alle"
+  },
+  "libraryNav__duration-long": {
+    "string": "45–60 Minuten"
+  },
+  "libraryNav__duration-medium": {
+    "string": "30–45 Minuten"
+  },
+  "libraryNav__duration-short": {
+    "string": "15–30 Minuten"
+  },
+  "libraryNav__duration-xlong": {
+    "string": "Über 60 Minuten"
+  },
+  "libraryNav__filtersApplied": {
+    "string": "Filter angewendet"
+  },
+  "libraryNav__mediaType": {
+    "string": "Medientyp"
+  },
+  "libraryNav__mediaType-all": {
+    "string": "Alle"
+  },
+  "libraryNav__mediaType-audio": {
+    "string": "Nur Audio"
+  },
+  "libraryNav__mediaType-video": {
+    "string": "Video"
+  },
+  "libraryNav__playbackStatus": {
+    "string": "Playback Status"
+  },
+  "libraryNav__playbackStatus-all": {
+    "string": "Alle"
+  },
+  "libraryNav__playbackStatus-finished": {
+    "string": "Fertig"
+  },
+  "libraryNav__playbackStatus-started": {
+    "string": "Angefangen"
+  },
+  "libraryNav__playbackStatus-unstarted": {
+    "string": "Noch nicht begonnen"
+  },
+  "libraryNav__playlists": {
+    "string": "Playlisten"
+  },
+  "libraryNav__saved": {
+    "string": "Gespeichert "
+  },
+  "libraryNav__sort": {
+    "string": "Sortieren"
+  },
+  "library__noMatchingCopy": {
+    "string": "Höre dir Inhalte auf „Entdecken“ an oder versieh sie mit einem Lesezeichen für später."
+  },
+  "library__noMatchingHeading": {
+    "string": "Du hast noch keine entsprechenden Inhalte gespeichert."
+  },
+  "molecule-buttonGuest__downloadQuality": {
+    "string": "Download-Qualität anpassen "
+  },
+  "molecule-buttonGuest__saving": {
+    "string": "In meiner Bibliothek abspeichern "
+  },
+  "molecule-buttonGuest__syncing": {
+    "string": "Geräte synchronisieren"
+  },
+  "molecule-buttonShare__copied": {
+    "string": "Kopiert!"
+  },
+  "songsBooksDetail__contributors": {
+    "string": "Verschiedene Mitwirkende "
+  },
+  "songsBooksDetail__numSongs": {
+    "string": "{count} Lieder"
+  },
+  "songsListPage__intro": {
+    "string": "Präge dir Bibelstellen besser im Gedächtnis ein, indem du das Wort Gottes in musikalischer Form hörst. Höre dir Inhalte nach Alben oder Bibelbüchern an."
+  },
+  "songsListPage__tabAlbums": {
+    "string": "Alben"
+  },
+  "songsListPage__tabPassage": {
+    "string": "Abschnitt"
+  },
+  "songsListPage__title": {
+    "string": "Bibel-Lieder"
+  },
+  "testimonies__seeAll": {
+    "string": "Alle Zeugnisse anzeigen"
+  },
+  "testimonies__submitTestimony": {
+    "string": "Eine Erfahrung teilen"
+  },
+  "time__hoursMinutesAndSeconds": {
+    "comment": "time hours, minutes and seconds",
+    "string": "{h}:{m}:{s}"
   }
 }
